cmake_minimum_required(VERSION 3.23)
project(dut_cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(dut_cpp main.cpp LB1/lab1.cpp LB1/lab1.h LB2/lab2.cpp LB2/lab2.h LB7/lab7.cpp LB7/lab7.h LB6/lab6.cpp LB6/lab6.h CiscoLab1_6_1/cl161.cpp CiscoLab1_6_1/cl161.h CiscoLab2_3_1/cl231.cpp CiscoLab2_3_1/cl231.h PZ11/pz11.cpp PZ11/pz11.h PZ12/pz12.cpp PZ12/pz12.h)
