cmake_minimum_required(VERSION 3.25)
project(dut_cpp2)

set(CMAKE_CXX_STANDARD 17)

add_executable(sem1_lb_1 src/semester1/LB1/lb1.cpp)
add_executable(sem1_lb_2 src/semester1/LB2/lb2.cpp)
add_executable(sem1_lb_6 src/semester1/LB6/lb6.cpp)
add_executable(sem1_lb_7 src/semester1/LB7/lb7.cpp)
add_executable(sem1_pz11 src/semester1/PZ11/pz11.cpp)
add_executable(sem1_pz12 src/semester1/PZ12/pz12.cpp)
add_executable(sem1_cl_161 src/semester1/CiscoLab1_6_1/cl161.cpp)
add_executable(sem1_cl_231 src/semester1/CiscoLab2_3_1/cl231.cpp)


add_executable(sem2_w1_pz src/semester2/week01_pointers/pz_pointers_1.cpp)
add_executable(sem2_w2_pz src/semester2/week02_pointers/pz_pointers_2.cpp)
add_executable(sem2_w5_pz src/semester2/week05_dynamic_memory/pz_dynamic_memory.cpp)
add_executable(sem2_w7_pz src/semester2/week07_functions/pz_functions.cpp)
add_executable(sem2_w8_pz src/semester2/week08_functions/pz_functions.cpp)
add_executable(sem2_w9_cisco458 src/semester2/week09_strings/cl458.cpp)
add_executable(sem2_w9_cisco457 src/semester2/week09_strings/cl457.cpp)
add_executable(sem2_w11_cisco511 src/semester2/week11_classes/cl511.cpp)
add_executable(sem2_w11_cisco512 src/semester2/week11_classes/cl512.cpp)
add_executable(sem2_w11_cisco513 src/semester2/week11_classes/cl513.cpp)
add_executable(sem2_w12_cisco514 src/semester2/week12_classes/cl514.cpp)
add_executable(sem2_w12_cisco531 src/semester2/week12_classes/cl531.cpp)
add_executable(sem2_w13_cisco532 src/semester2/week13_classes_extra/cl532.cpp)
add_executable(sem2_w14_cisco534 src/semester2/week14_classes_extra/cl534.cpp)
add_executable(sem2_w14_cisco535 src/semester2/week14_classes_extra/cl535.cpp)
add_executable(sem2_w15_cisco631 src/semester2/week15_oop/cl631.cpp)
add_executable(sem2_w15_cisco631_2 src/semester2/week15_oop/cl631_2.cpp)
add_executable(sem2_w17_cisco711 src/semester2/week17_oop/cl711.cpp)
add_executable(sem2_w17_cisco711_2 src/semester2/week17_oop/cl711_2.cpp)
add_executable(sem2_w17_cisco721 src/semester2/week17_oop/cl721.cpp)
